env fixed